# 3d-raycast-optimization

./: .gitignore  README.md  benchmark_topologies.py  compare_optimizers.py  demo.py  optimize.py  pyproject.toml  requirements.txt  run_frontend.sh
benchmarking/: benchmark_topologies.py  compare_optimizers.py
examples/: basic_usage.py  dual_annealing_outdoor.py
src/: visibility_gpu.py
src/cuda/: visibility_kernel.cu
tactica/: __init__.py
tactica/api/: __init__.py  schemas.py
tactica/config/: __init__.py  settings.py
tactica/core/: __init__.py  sensors.py  visibility.py
tactica/dem/: __init__.py  coordinates.py  loader.py  synthetic.py
tactica/optimization/: __init__.py  constraints.py  objectives.py  problem.py  runner.py
tactica/visualization/: __init__.py  animation.py  plotting.py
tests/: __init__.py  test_core.py  test_dem.py  test_optimization.py
